--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<h1>Hello World</h1>
-<p>I'm Marc and I attend the Craft Academy Bootcamp.</p>
+<!DOCTYPE HTML>
+
+<html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>My First Website</title>
+</head>
+<body>
+    <h1>Hello World</h1>
+    <p>I'm Marc and I attend the Craft Academy Bootcamp.</p>
+    <img src="Photos/Single_apple.png" alt="Apple ">
+</body>
+<link rel="stylesheet" href="style.css">
+</html>
