--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML>
 
 <html>
+        <ul>
+                <li><a href="default.asp">Home</a></li>
+                <li><a href="news.asp">News</a></li>
+                <li><a href="contact.asp">Contact</a></li>
+                <li><a href="about.asp">About</a></li>
+              </ul>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
